k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: micro
  labels:
    name: micro
    environment: development
